# assistant

./: .gitignore  CLAUDE.md  README.md  app.py  docker-compose.yml
backend/: .env.exemple  Dockerfile  analysis.py  co2_calculator.py  main.py  pyproject.toml
backend/prompts/: analysis_system.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: product.ts
frontend/src/components/: CarbonMeter.tsx  LocationPicker.tsx  NutrientLevelBar.tsx  ScoreBadge.tsx
frontend/src/pages/: LandingPage.tsx  ProductPage.tsx  ScannerPage.tsx
frontend/src/types/: product.ts
static/: scanner.js
templates/: index.html
